FISH-10055 Remove isblank